Fixed mobile text spacing issue

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,6 +1,8 @@
 // .mobile-header, .mobile-menu{
 //  display: none;
 // }
+
+
 .highlight-text-brand {
   color: #ecb4b4 !important;
   font-weight: 700;
@@ -270,8 +272,7 @@ i {
 .reverse {
   flex-direction: row-reverse;
 
-  .text {
-  }
+
 }
 
 .google-maps {
