--- a/scss/responsive/_mobile-800.scss
+++ b/scss/responsive/_mobile-800.scss
@@ -3,6 +3,9 @@
   h2 {
     //margin: 0em 1em 0 0.5em !important;
   }
+  .diensten, .appointment, .pricelist{
+    padding: 1em !important;
+  }
 
   .intro-text{
     h2{
